--- a/public/latest/assets/admin-css/message.css
+++ b/public/latest/assets/admin-css/message.css
@@ -1,6 +1,6 @@
 .message-list-page-wrap .messages-box {
   border-radius: 0.5rem;
-  border: 1px solid var(--neutral-40, #C5CCD8);
+  border: 1.5px solid var(--neutral-40, #C5CCD8);
   background-color: #fff;
   display: grid;
   grid-template-columns: 31.5% 68.5%;
@@ -255,10 +255,29 @@
   background: #F1F4F9;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head {
+  background: var(--neutral-white, #FFF);
+  box-shadow: 0px 6px 34px 0px rgba(0, 0, 0, 0.08);
   padding: 1.25rem 1.5rem 1.1875rem 1.5rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media {
   align-items: center;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media .view-bttn {
+  padding: 0.6875rem 1rem;
+  border-radius: 0.375rem;
+  padding: 0.6875rem 1rem;
+  background: var(--primary-color-blue, #294CFF);
+  color: var(--neutral-white, #FFF);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  display: inline-block;
+  height: 2.5rem;
+  transition: ease-in-out 0.3s;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media .view-bttn:hover {
+  background-color: #2F3A4C;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media img {
   width: 3.5rem;
@@ -268,12 +287,33 @@
      object-fit: cover;
   margin-right: 1rem;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media h5 {
+.message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media .name {
   color: var(--neutral-90, #101C2D);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.75rem;
+  display: flex;
+  align-items: center;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media .name span {
+  border-radius: 1rem;
+  background: var(--success-green-lightest, #E8F6E5);
+  display: inline-flex;
+  padding: 0.125rem 0.5rem 0.125rem 0.375rem;
+  justify-content: center;
+  align-items: center;
+  color: var(--success-green-dark, #2A920B);
+  text-align: center;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.125rem;
+  margin-left: 1rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media .name span i {
+  font-size: 8px;
+  margin-right: 0.5rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .chat-room-head .media p {
   color: var(--neutral-60, #66768E);
@@ -283,80 +323,229 @@
   line-height: 1.25rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
-  padding: 2.2rem 2rem;
-  border-top: 1px solid #C5CCD8;
-  padding-top: 1rem;
-}
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box {
-  max-height: 500px;
-  overflow-y: scroll;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  padding: 2.5rem 2rem 2rem 2rem;
   flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 2rem;
+  flex: 1 0 0;
+  align-self: stretch;
+  min-height: 63rem;
+  padding-bottom: 0;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item {
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item {
+  max-width: 90%;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media {
+  align-items: flex-start;
+  display: inline-flex;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media .avatar {
+  position: relative;
+  margin-right: 0.75rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media .avatar img {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-block;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media .avatar i {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  font-size: 8px;
+  color: #43B324;
+  border: 2px solid #fff;
+  border-radius: 50%;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media .d-flex {
+  align-items: center;
+  justify-content: space-between;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media .d-flex h6 {
+  color: var(--neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .media.main-media .d-flex span {
+  display: inline-block;
+  color: var(--neutral-60, #66768E);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .text {
   border-radius: 0rem 0.5rem 0.5rem 0.5rem;
   background: var(--neutral-10, #F9FAFB);
+  padding: 0.625rem 0.875rem;
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
-  margin-top: 0rem;
-  padding: 0.4rem 0.7rem;
-  max-width: 96%;
-  display: inline-block;
+  margin-top: 0.4rem;
+  display: block;
+  width: 100%;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item p {
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .text p {
   color: var(--neutral-90, #101C2D);
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5rem;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item span {
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .typing {
+  padding: 0.3rem 0.625rem;
+  margin-top: 0.5rem;
+  border-radius: 0rem 0.5rem 0.5rem 0.5rem;
+  background: var(--neutral-10, #F9FAFB);
+  display: inline-block;
+  width: auto;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .typing i {
+  font-size: 1.5rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .file {
+  padding: 0.625rem 0.875rem;
+  border-radius: 0rem 0.5rem 0.5rem 0.5rem;
+  border: 1px solid var(--neutral-20, #F1F4F9);
+  background: var(--neutral-white, #FFF);
+  display: block;
+  width: 100%;
+  margin-top: 0.4rem;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .file .media {
+  align-items: center;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .file .media img {
+  margin-right: 1rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .file .media h5 {
+  color: var(--neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .file .media p {
   color: var(--neutral-60, #66768E);
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.125rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  line-height: 1.25rem;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .sender {
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .react-box {
+  text-align: right;
+  margin-top: 0.5rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .react-box ul li {
+  display: inline-block;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .react-box ul li span {
+  font-size: 1.4rem;
+  display: inline-block;
+  padding: 0rem 0.5rem;
+  border-radius: 1rem;
+  background-color: #F9FAFB;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item {
   margin-left: auto;
-  margin-right: 1rem;
-  background-color: rgba(231, 235, 255, 0.5);
-  border-radius: 0.5rem 0rem 0.5rem 0.5rem;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .reciver {
-  margin-right: auto;
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item .file {
+  border-radius: 0.5rem 0rem 0.5rem 0.5rem;
+  background: var(--primary-color-blue-light, #3D5CFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item .file .media h5 a {
+  color: #fff !important;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item .file .media span {
+  color: #fff !important;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item .media.main-media .text {
+  border-radius: 0.5rem 0rem 0.5rem 0.5rem;
+  background: var(--primary-color-blue-light, #3D5CFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item .media.main-media .text p {
+  color: #fff !important;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .date-status {
+  text-align: center;
+  width: 100%;
+  position: relative;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .date-status hr {
+  display: block;
+  width: 100%;
+  border: 0;
+  background-color: #cacccf;
+  height: 0.0625rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .date-status span {
+  color: var(--neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 6px;
+  background-color: #fff;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box {
   padding: 1.5rem 2rem;
+  padding-top: 2rem;
   position: relative;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box input {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-30, #E5ECF6);
+  background: var(--neutral-white, #FFF);
+  padding: 0.625rem 0.875rem;
+  height: 3.5rem;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
   color: var(--neutral-60, #66768E);
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5rem;
-  height: 2.8rem;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .btn-prm {
+.message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .file-attach-bttns {
+  position: absolute;
+  right: 45px;
+  top: 40px;
+  z-index: 9999;
+  display: inline-flex;
+  align-items: center;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .file-attach-bttns .btn {
+  margin-left: 0.5rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .file-attach-bttns .btn-emoji {
+  width: 2rem;
+  padding: 0;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .file-attach-bttns .btn-submit {
   border-radius: 0.375rem;
   background: var(--primary-color-blue, #294CFF);
   color: var(--neutral-white, #FFF);
+  height: 2.5rem;
+  padding: 0.6875rem 1rem;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.25rem;
-  position: absolute;
-  right: 39px;
-  top: 30px;
+  transition: ease-in-out 0.3s;
 }
-
-.student-messages-page .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item {
-  margin-top: 1rem !important;
+.message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .file-attach-bttns .btn-submit:hover {
+  background-color: #344054;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
