--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -1709,6 +1709,146 @@
   display: block !important;
 }
 
+.app-title h3 {
+  color: var(--gray-700, #344054);
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2rem;
+}
+
+.app-bttn {
+  text-align: right;
+}
+.app-bttn a {
+  border-radius: 0.25rem;
+  border: 1px solid var(--gray-600, #475467);
+  color: var(--gray-600, #475467);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  display: inline-flex;
+  padding: 0.75rem 1rem;
+  justify-content: center;
+  align-items: center;
+  transition: ease-in-out 0.3s;
+}
+.app-bttn a:hover {
+  background-color: #475467;
+  color: #fff;
+}
+.app-bttn a:hover img {
+  filter: invert(100%) sepia(4%) saturate(0%) hue-rotate(228deg) brightness(102%) contrast(105%);
+}
+.app-bttn a img {
+  margin-right: 0.5rem;
+}
+
+.connect-app-box {
+  padding: 2rem;
+}
+
+.app-box .media {
+  align-items: center;
+  margin-top: 1.5rem;
+}
+.app-box .media img {
+  margin-right: 1.8rem;
+}
+.app-box .media h5 {
+  color: #00B2EF;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2rem;
+  margin-bottom: 0.5rem;
+}
+.app-box .media p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  width: 80%;
+}
+.app-box .media a {
+  border-radius: 0.25rem;
+  border: 1px solid var(--primary-color-blue, #294CFF);
+  padding: 0.75rem 2rem;
+  color: var(--primary-color-blue-light, #3D5CFF);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  transition: ease-in-out 0.3s;
+  min-width: 9.5rem;
+  text-align: center;
+}
+.app-box .media a:hover {
+  background-color: #3D5CFF;
+  color: #fff;
+}
+.app-box .media a.connected {
+  border-color: #F04574;
+  color: #F04574;
+}
+.app-box .media a.connected:hover {
+  background-color: #F04574;
+  color: #fff;
+}
+
+.app-modals .custom-modal-content {
+  border-radius: 0.5rem;
+  background: var(--White, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.app-modals .custom-modal-content h5 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.app-modals .custom-modal-content .modal-header {
+  border-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+.app-modals .custom-modal-content .form-group label {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.app-modals .custom-modal-content .form-group .form-control {
+  border-radius: 0.375rem;
+  background: rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  text-overflow: ellipsis;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  height: 3rem;
+}
+.app-modals .custom-modal-content .btn-submit {
+  border-radius: 0.375rem;
+  background: var(--primary-color-blue, #294CFF);
+  color: var(--gray-white, #FFF);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  display: block;
+  width: 100%;
+  text-align: center;
+  height: 3rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .user-profile-picture .media {
     padding: 1rem;
