--- a/scss/user.scss
+++ b/scss/user.scss
@@ -1970,10 +1970,11 @@
     }
 }
 
-.social-extra-field div{
+.social-extra-field div {
     position: relative;
     margin-top: 1rem;
-    a{
+
+    a {
         position: absolute;
         right: 1rem;
         cursor: pointer;
@@ -1985,7 +1986,8 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        i{
+
+        i {
             font-size: 0.875rem;
             color: #667085;
         }
@@ -1994,20 +1996,182 @@
 
 
 .select-style-div-2,
-.select-style-div{
-    span{
-        display: none!important;
+.select-style-div {
+    span {
+        display: none !important;
     }
 }
 
 .select-style-div-2.active,
-.select-style-div.active{
-    span{
-        display: block!important;
+.select-style-div.active {
+    span {
+        display: block !important;
     }
 }
 
+.app-title {
+    h3 {
+        color: var(--gray-700, #344054);
+        font-family: Inter;
+        font-size: 1.5rem;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 2rem;
+    }
+}
 
+.app-bttn {
+    text-align: right;
+
+    a {
+        border-radius: 0.25rem;
+        border: 1px solid var(--gray-600, #475467);
+
+        color: var(--gray-600, #475467);
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5rem;
+        display: inline-flex;
+        padding: 0.75rem 1rem;
+        justify-content: center;
+        align-items: center;
+        transition: ease-in-out .3s;
+
+        &:hover {
+            background-color: #475467;
+            color: #fff;
+
+            img {
+                filter: invert(100%) sepia(4%) saturate(0%) hue-rotate(228deg) brightness(102%) contrast(105%);
+            }
+        }
+
+        img {
+            margin-right: 0.5rem;
+        }
+    }
+}
+
+.connect-app-box {
+    padding: 2rem;
+}
+
+.app-box {
+    .media {
+        align-items: center;
+        margin-top: 1.5rem;
+
+        img {
+            margin-right: 1.8rem;
+        }
+
+        h5 {
+            color: #00B2EF;
+            font-size: 1.5rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 2rem;
+            margin-bottom: 0.5rem;
+        }
+
+        p {
+            color: var(--neutral-color-neutral-60, #66768E);
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            width: 80%;
+        }
+
+        a {
+            border-radius: 0.25rem;
+            border: 1px solid var(--primary-color-blue, #294CFF);
+            padding: 0.75rem 2rem;
+            color: var(--primary-color-blue-light, #3D5CFF);
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.5rem;
+            transition: ease-in-out .3s;
+            min-width: 9.5rem;
+            text-align: center;
+
+            &:hover {
+                background-color: #3D5CFF;
+                color: #fff;
+            }
+        }
+
+        a.connected {
+            border-color: #F04574;
+            color: #F04574;
+
+            &:hover {
+                background-color: #F04574;
+                color: #fff;
+            }
+        }
+    }
+}
+
+.app-modals {
+    .custom-modal-content {
+        border-radius: 0.5rem;
+        background: var(--White, #FFF);
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
+
+        h5 {
+            color: var(--neutral-color-neutral-90, #101C2D);
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.75rem;
+        }
+
+        .modal-header {
+            border-bottom: 0 !important;
+            padding-bottom: 0 !important;
+        }
+
+        .form-group {
+            label {
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.75rem;
+            }
+
+            .form-control {
+                border-radius: 0.375rem;
+                background: rgba(0, 0, 0, 0.05);
+                overflow: hidden;
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                text-overflow: ellipsis;
+                font-size: 0.9rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                height: 3rem;
+            } 
+        }
+        .btn-submit {
+            border-radius: 0.375rem;
+            background: var(--primary-color-blue, #294CFF);
+            color: var(--gray-white, #FFF);
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.25rem; 
+            box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+            display: block;
+            width: 100%;
+            text-align: center;
+            height: 3rem;
+        }
+    }
+}
 
 
 
