--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1849,6 +1849,19 @@
     .course-outline-wrap .accordion .accordion-item .lesson-wrap a i{
         color: #7289FF!important;
     }
+    .app-modals .custom-modal-content{
+        border: 1px solid #1E222A;
+        background: #0D0D0D; 
+    }
+
+    .app-modals .custom-modal-content .form-group .form-control{
+        color: #fff;
+        border-color: #101C2D;
+    }
+
+    .app-modals .custom-modal-content .btn-submit{
+        background-color: #7289FF;
+    }
 }
 
 
